--- a/index.html
+++ b/index.html
@@ -13,17 +13,22 @@
             <div>
                <h1>EVELYN MONTES SOBAL</h1> 
             </div>
-            
-            <nav>
-                <ul>
-                    <li> <a href="#About_me">About me</a></li>
-                    <li> <a href="#Work">Work</a></li>
-                    <li> <a href="#Contact-me">Contact me</a></li>
-                    <li> <a href="Resume">Resume</a></li>
-                </ul>
-            </nav>
-            
+            <div>
+                <nav>
+                    <ul>
+                        <li> <a href="#About_me">About me</a></li>
+                        <li> <a href="#Work">Work</a></li>
+                        <li> <a href="#Contact-me">Contact me</a></li>
+                        <li> <a href="Resume">Resume</a></li>
+                    </ul>
+                 </nav>
+
+            </div>   
         </header>
+        <div class="image_background">
+            <img src="./Assets/verge-pathways-abstract-4k_1555208092.jpg.webp" />
+
+        </div>
         <section class="sections_of_website" >
             <section id="About_me" >
                 <h2>ABOUT ME</h2>
