--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <ul>
                         <li> <a href="#About_me">About me</a></li>
                         <li> <a href="#Work">Work</a></li>
-                        <li> <a href="#Contact-me">Contact me</a></li>
+                        <li> <a href="#Contact_me">Contact me</a></li>
                         <li> <a href="Resume">Resume</a></li>
                     </ul>
                  </nav>
