Added one more div and a image within the div

--- a/index.html
+++ b/index.html
@@ -34,13 +34,17 @@
                 <h2>ABOUT ME</h2>
                 <div class="content">
                    <p> Heyo!
-                        Glad I caught your eye. A little bit about me is that I am a passionate enthusist learner and fond of brining to reality to my vision and ideas in a creative manner through computer science creating an inclusive user friendly environment. I started learning HTML,CSS and Javascript towards the ends of 2022 and am currently in a bootcamp through UC Berkly learning full stack web development. I am commited to growing and  deepening my knowledge with the projects that I create.
+                        Glad I caught your eye. A little bit about me is that I am a passionate enthusiast learner and fond of brining to reality to my vision and ideas in a creative manner through computer science creating an inclusive user friendly environment. I started learning HTML,CSS and Javascript towards the ends of 2022 and am currently in a bootcamp through UC Berkly learning full stack web development. I am commited to growing and  deepening my knowledge with the projects that I create.
                    </p>
                 </div>
             </section>
             <section id="Work" >
                 <h2>WORK</h2> 
                 <div class="content">
+                    <div class="primary_image1">
+                        <img class="project_pic1" src="./Assets/01-html-css-git-homework-demo.png"/>
+                        <h3 class="first_text">Placeholder Project Image</h3>
+                    </div>
                     <div class="primary_image">
                         <img class="project_pic" src="./Assets/purpldise.jpg" id="image_1" alt="A photo of a purple landscape of a lake surrounded by trees, mountains, along with a moon and planet in the sky with a stary night."/>
                         <h3 class="first_text">Placeholder Project Image</h3>
