Trying to fix the anchor tags within the nav section to stay withing the div when resizing

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./reset.css">
     <link rel="stylesheet" href="./style.css">
     <title>Document</title>
 </head>
@@ -13,13 +14,13 @@
             <div>
                <h1>EVELYN MONTES SOBAL</h1> 
             </div>
-            <div>
-                <nav>
-                    <ul>
-                        <li> <a href="#About_me">About me</a></li>
-                        <li> <a href="#Work">Work</a></li>
-                        <li> <a href="#Contact_me">Contact me</a></li>
-                        <li> <a href="Resume">Resume</a></li>
+            <div class="resizable">
+                <nav class="resizable">
+                    <ul class="resizable">
+                        <li class="resizable" > <a href="#About_me">About me</a></li>
+                        <li class="resizable" > <a href="#Work">Work</a></li>
+                        <li class="resizable" > <a href="#Contact_me">Contact me</a></li>
+                        <li class="resizable" > <a href="Resume">Resume</a></li>
                     </ul>
                  </nav>
 
