--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <section class="sections_of_website">
         <section id="About_me">
           <h2>ABOUT ME</h2>
-          <div class="content">
+          <div class="about_content">
             <p>
               Heyo! Glad I caught your eye. A little bit about me is that I am a
               passionate enthusiast learner and fond of brining to reality to my
@@ -50,9 +50,9 @@
         <section id="Work">
           <h2>WORK</h2>
 
-          <div class="content">
-            <div class="primary_image">
-                <div class="firstrow">   
+          <div class="work_content">
+            <div class="finished_project_row">
+                <div class="first_item">   
                       <img
                 class="project_pic1"
                 src="./Assets/01-html-css-git-homework-demo.png"
@@ -62,8 +62,8 @@
             
             </div>
 
-            <div class="primary_image">
-                <div class="secondrow">
+            <div class="large_project_row">
+                <div class="first_item_of_LPR">
                        <img
                 class="project_pic"
                 src="./Assets/purpldise.jpg"
@@ -75,8 +75,8 @@
          
             </div>
 
-            <div class="secondary_images">
-              <div class="section_1">
+            <div class="multiple_item_row">
+              <div class="item_1">
                 <img
                   class="project_pic2"
                   src="./Assets/Leaving Milkyway [3240x5760].png"
@@ -85,7 +85,7 @@
                 <h3 class="first_text">Placeholder Project Image</h3>
               </div>
 
-              <div class="section_1">
+              <div class="item_2">
                 <img
                   class="project_pic2"
                   src="./Assets/The mind of a reader.jpg"
@@ -95,8 +95,8 @@
               </div>
             </div>
 
-            <div class="secondary_images">
-              <div class="section_2">
+            <div class="multiple_item_row">
+              <div class="item_1">
                 <img
                   class="project_pic2"
                   src="./Assets/𒆜Gϋʅisƚαɳ❀𒆜.jpg"
@@ -105,7 +105,7 @@
                 <h3 class="first_text">Placeholder Project Image</h3>
               </div>
 
-              <div class="section_2">
+              <div class="item_2">
                 <img
                   class="project_pic2"
                   src="./Assets/fBWfChRh.jpg"
