Made updates to README file as well as clearer comments to style css sheet and html sheet

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="name_tag">
           <h1>EVELYN MONTES SOBAL</h1>
         </div>    
-        <!-- Navigation section with anchor tags that direct to the corresponding sections of the website content -->
+        <!-- Div containing navigation section with anchor tags that direct to the corresponding sections of the website content -->
         <div class="nav_container">
        
           <nav>
@@ -56,7 +56,7 @@
           <div class="side_content">
           <h2>WORK</h2>
           </div>
-          <!-- second children of work section, containing four child divs -->
+          <!-- second child of work section, containing four child divs -->
           <div class="work_content">
             <div class="finished_project_row">
                 <div class="first_item">   
