edited paragraooh content class about_content

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 
 <body>
   <main>
-    <header>
+    <section class="header">
+     <header>
       <div class="name_tag">
         <h1>EVELYN MONTES SOBAL</h1>
       </div>
@@ -28,12 +29,17 @@
           </ul>
         </nav>
       </div>
-    </header>
+    </header> 
+  </section>
+    
     <!--Pink purple gradient photo underneath header  -->
-    <div class="image_background">
+    <section>
+      <div class="image_background">
       <img id="pinkback" src="./Assets/verge-pathways-abstract-4k_1555208092.jpg.webp" />
       <img id="redpic" src="./Assets/red.jpg">
     </div>
+    </section>
+   
       <!-- Main section of website containing three sections of content  -->
       <section class="sections_of_website">
         <!-- first section, containing two child divs -->
@@ -43,8 +49,8 @@
           </div>
           <div class="about_content">
             <p>
-              Heyo! Glad I caught your eye. A little bit about me is that I am a
-              passionate enthusiast learner and fond of brining to reality to my
+              Heyo! Glad I caught your eye. A little bit about me is that I am 
+              passionate and a zealous learner, fond of brining to reality -to my-
               vision and ideas in a creative manner through computer science
               creating an inclusive user friendly environment. I started
               learning HTML,CSS and Javascript towards the ends of 2022 and am
