--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <div class="about_content">
             <p>
               Heyo! Glad I caught your eye. A little bit about me is that I am 
-              passionate and a zealous learner, fond of brining to reality -to my-
+              passionate and a zealous learner, fond of brining to reality
               vision and ideas in a creative manner through computer science
               creating an inclusive user friendly environment. I started
               learning HTML,CSS and Javascript towards the ends of 2022 and am
