more editing to div about__content

--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
           <div class="about_content">
             <p>
               Heyo! Glad I caught your eye. A little bit about me is that I am 
-              passionate and a zealous learner, fond of brining to reality
-              vision and ideas in a creative manner through computer science
-              creating an inclusive user friendly environment. I started
+              passionate and a zealous learner, fond of bringing 
+              vision and ideas to reality in a creative manner through computer science
+             simultaneously establishing an inclusive user friendly environment. I started
               learning HTML,CSS and Javascript towards the ends of 2022 and am
-              currently in a bootcamp through UC Berkly learning full stack web
-              development. I am commited to growing and deepening my knowledge
+              currently certified with a full stack web
+              development certificate through UC Berkeley bootcamp program . I am commited to growing and deepening my knowledge
               with the projects that I create.
             </p>
           </div>
