--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
               </li>
 
               <li>
-                <p>Email address: montessobalevelyn@gmail.com</p>
+                <p>Email address: <href>montessobalevelyn@gmail.com</href> </p>
               </li>
             </ul>
           </div>
