Removed unused node modules

--- a/index.html
+++ b/index.html
@@ -152,8 +152,18 @@
               </li>
 
               <li>
-                <p>Email address: <href>montessobalevelyn@gmail.com</href> </p>
+                <p> <a href="mailto: montessobalevelyn@gmail.com">Email Me</a> </p>
               </li>
+               <li>
+                <p>Linkedin: <a class="icon icon-github" href="https://www.linkedin.com/in/evelyn-montes-sobal-061a811aa/" target="_blank"
+                  rel="noopener noreferrer">
+                  <img src="./Assets/LI-In-Bug.png" alt="" srcset="" /></p>
+              </li>
+               <li>
+                <a href="file:///C:/Users/monte/Downloads/MontesSobalEvelynResume2023.pdf" download="MontesSobalEvelynResume" target="_blank"
+                  rel="noopener noreferrer"> Download Resume</a>
+              </li>
+              
             </ul>
           </div>
         </section>
